--- a/DairyProject/templates/pay/payment.html
+++ b/DairyProject/templates/pay/payment.html
@@ -63,7 +63,7 @@
     <script>
         var options = {
             key: "rzp_test_VsNzgoQtqip5Wd", // Enter your Razorpay Key ID
-            amount: "50000", // Amount is in currency subunits, i.e., 100 paise = ₹1
+            amount: "{{ order.amount }}",  // Use the amount received from Django context
             currency: "INR", // Specify your currency here
             name: "DairySync", // Your/store name
             description: "Donation", // Payment description
