--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -66,7 +66,7 @@
         <img src="{% static 'img/a.jpeg' %}" alt="Image 1" class="scrolling-image">
         <img src="{% static 'img/b.jpeg' %}" alt="Image 2" class="scrolling-image">
         <img src="{% static 'img/c.jpeg' %}" alt="Image 3" class="scrolling-image">
-        <img src="{% static 'img/d.jpg' %}" alt="Image 4" class="scrolling-image">
+        <img src="{% static 'img/d.png' %}" alt="Image 4" class="scrolling-image">
         <img src="{% static 'img/e.jpg' %}" alt="Image 4" class="scrolling-image">
         <img src="{% static 'img/f.jpg' %}" alt="Image 4" class="scrolling-image">
         <img src="{% static 'img/f1.jpg' %}" alt="Image 4" class="scrolling-image">
@@ -133,7 +133,7 @@
     <!-- Copyright End -->
     {% endblock body %}
     <div class="profile-pic-container">
-        <img src="{% static 'img/d.jpeg' %}" alt="Profile Picture" class="profile-pic">
+        <img src="{% static 'img/login.jpg' %}" alt="Profile Picture" class="profile-pic">
     </div>    
     <a target="_blank" href="https://wa.me/6238097126" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
     <!-- JavaScript Libraries -->
