--- a/DairyProject/templates/dash/c_dashboard.html
+++ b/DairyProject/templates/dash/c_dashboard.html
@@ -142,6 +142,7 @@ body {
     </div>
     <ul class="sidebar-menu">
         <li><a href="{% url 'complete_c_profile' %}" data-url="{% url 'complete_c_profile' %}"><i class="fas fa-user"></i>Edit Profile</a></li>
+        <li><a href="{% url 'payment_history' %}" data-url="{% url 'payment_history' %}"><i class="fas fa-user"></i>Payment History</a></li>
 
     </ul>
 </div>
