--- a/DairyProject/templates/dash/c_dashboard.html
+++ b/DairyProject/templates/dash/c_dashboard.html
@@ -143,6 +143,7 @@ body {
     <ul class="sidebar-menu">
         <li><a href="{% url 'complete_c_profile' %}" data-url="{% url 'complete_c_profile' %}"><i class="fas fa-user"></i>Edit Profile</a></li>
         <li><a href="{% url 'payment_history' %}" data-url="{% url 'payment_history' %}"><i class="fas fa-user"></i>Payment</a></li>
+        <li><a href="{% url 'order_history' %}" data-url="{% url 'order_history' %}"><i class="fas fa-user"></i>order</a></li>
 
     </ul>
 </div>
