--- a/DairyProject/templates/dash/delivery_dashboard.html
+++ b/DairyProject/templates/dash/delivery_dashboard.html
@@ -63,7 +63,7 @@
     <div class="sidebar">
         <h2>Delivery Dashboard</h2>
         <ul>
-            <li><a href="{% url 'delivery_dashboard' %}">Todays Orders</a></li>
+            <li><a href="{% url 'del_order_history' %}">Todays Orders</a></li>
             <!-- Add more sidebar links as needed -->
         </ul>
     </div>
