--- a/DairyProject/templates/pay/address_confirmation.html
+++ b/DairyProject/templates/pay/address_confirmation.html
@@ -28,7 +28,7 @@
 
       <!-- Other order details go here -->
 
-      <button type="button" id="confirmOrderBtn">Confirm Order</button>
+      <button type="button" id="confirmOrderBtn">Continue with payment</button>
     </form>
   </div>
 
