--- a/DairyProject/templates/dash/admindash.html
+++ b/DairyProject/templates/dash/admindash.html
@@ -131,6 +131,7 @@ body {
     <a href="{% url 'meeting' %}" data-url="{% url 'meeting' %}"><i class="fas fa-horse"></i> Schedule Meeting</a>
     <a href="{% url 'view_carts' %}" data-url="{% url 'view_carts' %}"><i class="fas fa-horse"></i> Carts</a>
     <a href="{% url 'view_carts' %}" data-url="{% url 'view_carts' %}"><i class="fas fa-horse"></i> Orders  </a>
+    <a href="{% url 'all_orders' %}" data-url="{% url 'all_orders' %}"><i class="fas fa-horse"></i> All Orders  </a>
     <a href="{% url 'pending_sellers' %}" data-url="{% url 'pending_sellers' %}"><i class="fas fa-horse"></i> Approve</a>
     <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-horse"></i> Users <i class="fas fa-caret-down"></i>
